--- a/styles/product-1.css
+++ b/styles/product-1.css
@@ -33,6 +33,7 @@ body {
 	color: #282828;
 	background-color: #ffffff;
 	padding-bottom: .5rem;
+	min-height: 100vh;
 }
 
 h1,
@@ -253,7 +254,9 @@ a.cart-link {
 @media (min-width: 31.25em) {
 
 	.float-left {
-		
+		float: left;
+		margin-right: 1.5rem;
+		margin-bottom: .5rem;
 	}
 
 }
@@ -263,23 +266,50 @@ a.cart-link {
 	.collage {
 		width: 100%;
 		height: 38rem;
-		
+		position: relative;
+	}
+
+	.collage img{
+		max-width: 55%;
+		transition: all 0.3s ease-in-out;
+		border: 5px solid white;
+		box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+	}
+
+	.collage img:hover {
+		z-index: 5;
+		transform: scale(1.05);
+	}
+
+	.lemon-photo-1,
+	.lemon-photo-2,
+	.lemon-photo-3,
+	.lemon-photo-4 {
+		position: absolute;
 	}
 
 	.lemon-photo-1 {
-		
+		top: 2rem;
+		left: 5rem;
+		z-index: 1;
 	}
 
 	.lemon-photo-2 {
-		
+		bottom: 1rem;
+		left: 10rem;
+		z-index: 4;
 	}
 
 	.lemon-photo-3 {
-		
+		top: 9rem;
+		right: 12rem;
+		z-index: 3;
 	}
 
 	.lemon-photo-4 {
-		
+		top: 1rem;
+		right: 4rem;
+		z-index: 2;
 	}
 
 }
